# SimpleWildcardsComfyUI

./: LICENSE  README.md  __init__.py  concat.py  disable.py  enable.py  install.py  pyproject.toml  requirements.txt  uninstall.py  utils.py  vars.py  wildcard.py
.github/workflows/: publish.yml
js/: main.js
