[project]
name = "simplewildcardscomfyui"
description = "A simple wildcard node for ComfyUI. Can also be used a style prompt node."
version = "1.0.1"
license = "MIT"
dependencies = ["pipe==2.2"]

[project.urls]
Repository = "https://github.com/vanillacode314/SimpleWildcardsComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vanillacode314"
DisplayName = "SimpleWildcardsComfyUI"
Icon = ""
